--- a/app/index.html
+++ b/app/index.html
@@ -75,6 +75,8 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/directives/investigator.js"></script>
+        <script src="scripts/controllers/investigator.js"></script>
         <!-- endbuild -->
 </body>
 </html>
