--- a/app/index.html
+++ b/app/index.html
@@ -65,6 +65,7 @@
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/directives/investigator.js"></script>
         <script src="scripts/controllers/investigator.js"></script>
+        <script src="scripts/directives/plusminus.js"></script>
         <!-- endbuild -->
 </body>
 </html>
