--- a/app/index.html
+++ b/app/index.html
@@ -66,6 +66,7 @@
         <script src="scripts/directives/investigator.js"></script>
         <script src="scripts/controllers/investigator.js"></script>
         <script src="scripts/directives/plusminus.js"></script>
+        <script src="scripts/directives/skilltuple.js"></script>
         <!-- endbuild -->
 </body>
 </html>
