--- a/app/index.html
+++ b/app/index.html
@@ -67,6 +67,7 @@
         <script src="scripts/controllers/investigator.js"></script>
         <script src="scripts/directives/plusminus.js"></script>
         <script src="scripts/directives/skilltuple.js"></script>
+        <script src="scripts/services/investigatorsdata.js"></script>
         <!-- endbuild -->
 </body>
 </html>
