add simple phase counter

--- a/app/index.html
+++ b/app/index.html
@@ -68,6 +68,9 @@
         <script src="scripts/directives/plusminus.js"></script>
         <script src="scripts/directives/skilltuple.js"></script>
         <script src="scripts/services/investigatorsdata.js"></script>
+        <script src="scripts/services/phase.js"></script>
+        <script src="scripts/controllers/phase.js"></script>
+        <script src="scripts/services/activeinvestigators.js"></script>
         <!-- endbuild -->
 </body>
 </html>
