--- a/app/index.html
+++ b/app/index.html
@@ -74,6 +74,7 @@
         <script src="scripts/controllers/phase.js"></script>
         <script src="scripts/services/activeinvestigators.js"></script>
         <script src="scripts/controllers/settings.js"></script>
+        <script src="scripts/services/card_bucket.js"></script>
         <!-- endbuild -->
 </body>
 </html>
