add card pile file skeleton service

--- a/app/index.html
+++ b/app/index.html
@@ -75,6 +75,7 @@
         <script src="scripts/services/activeinvestigators.js"></script>
         <script src="scripts/controllers/settings.js"></script>
         <script src="scripts/services/card_bucket.js"></script>
+        <script src="scripts/services/card_pile.js"></script>
         <!-- endbuild -->
 </body>
 </html>
