add common items data angular constant and some examples

--- a/app/index.html
+++ b/app/index.html
@@ -76,6 +76,7 @@
         <script src="scripts/controllers/settings.js"></script>
         <script src="scripts/services/card_bucket.js"></script>
         <script src="scripts/services/card_pile.js"></script>
+        <script src="scripts/services/common_items_data.js"></script>
         <!-- endbuild -->
 </body>
 </html>
