--- a/app/index.html
+++ b/app/index.html
@@ -77,6 +77,7 @@
         <script src="scripts/services/card_bucket.js"></script>
         <script src="scripts/services/card_pile.js"></script>
         <script src="scripts/services/common_items_data.js"></script>
+        <script src="scripts/services/card_pile_common_items.js"></script>
         <!-- endbuild -->
 </body>
 </html>
