add card bucket, pile, common items cards, common items to investigators

--- a/app/index.html
+++ b/app/index.html
@@ -58,6 +58,7 @@
     <script src="bower_components/angular-underscore-module/angular-underscore-module.js"></script>
     <script src="bower_components/jquery-ui/jquery-ui.js"></script>
     <script src="bower_components/angular-ui-sortable/sortable.js"></script>
+    <script src="bower_components/angular-shuffler/shuffler.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
