--- a/app/index.html
+++ b/app/index.html
@@ -79,6 +79,8 @@
         <script src="scripts/services/card_pile.js"></script>
         <script src="scripts/services/common_items_data.js"></script>
         <script src="scripts/services/card_pile_common_items.js"></script>
+        <script src="scripts/services/spell_items_data.js"></script>
+        <script src="scripts/services/card_pile_spells.js"></script>
         <!-- endbuild -->
 </body>
 </html>
