add skill cards

--- a/app/index.html
+++ b/app/index.html
@@ -81,6 +81,8 @@
         <script src="scripts/services/card_pile_common_items.js"></script>
         <script src="scripts/services/spell_items_data.js"></script>
         <script src="scripts/services/card_pile_spells.js"></script>
+        <script src="scripts/services/skills_data.js"></script>
+        <script src="scripts/services/card_pile_skills.js"></script>
         <!-- endbuild -->
 </body>
 </html>
