add mini card directive and use it for common, unique and spells

--- a/app/index.html
+++ b/app/index.html
@@ -86,6 +86,7 @@
         <script src="scripts/services/card_pile_skills.js"></script>
         <script src="scripts/services/unique_items_data.js"></script>
         <script src="scripts/services/card_pile_unique.js"></script>
+        <script src="scripts/directives/mini_card.js"></script>
         <!-- endbuild -->
 </body>
 </html>
