add arkham location encounter drawn of cards

--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,7 @@
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/locations_encounters.css">
     <!-- endbuild -->
   </head>
   <body ng-app="arkhamHelperApp">
@@ -27,6 +28,7 @@
           <li><a ng-href="#">Home</a></li>
           <li><a ng-href="#/settings">Settings</a></li>
           <li><a ng-href="#/investigator">Investigator</a></li>
+          <li><a ng-href="#/arkham_encounters">Encounters</a></li>
         </ul>
         <h3 class="text-muted">arkhamHelper</h3>
       </div>
@@ -69,8 +71,8 @@
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/directives/investigator.js"></script>
         <script src="scripts/controllers/investigator.js"></script>
-        <script src="scripts/directives/plusminus.js"></script>
-        <script src="scripts/directives/skilltuple.js"></script>
+        <script src="scripts/directives/plus_minus.js"></script>
+        <script src="scripts/directives/skill_tuple.js"></script>
         <script src="scripts/services/phase.js"></script>
         <script src="scripts/controllers/phase.js"></script>
         <script src="scripts/services/active_investigators.js"></script>
