--- a/app/index.html
+++ b/app/index.html
@@ -47,7 +47,7 @@
   		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
   		ga('create', 'UA-56937134-2', 'auto');
-  		ga('send', 'pageview');
+  		// ga('send', 'pageview');
 
 	</script>
 
