--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
   		ga('create', 'UA-56937134-2', 'auto');
-  		ga('send', 'pageview');</script> <!--[if lt IE 9]>
+  		// ga('send', 'pageview');</script> <!--[if lt IE 9]>
     <script src="scripts/oldieshim.a466b7b1.js"></script>
-    <![endif]--> <script src="scripts/vendor.4776d940.js"></script> <script src="scripts/scripts.982768a1.js"></script>  
+    <![endif]--> <script src="scripts/vendor.4776d940.js"></script> <script src="scripts/scripts.69483886.js"></script>  
