--- a/app/index.html
+++ b/app/index.html
@@ -105,6 +105,7 @@
         <script src="scripts/services/data/locations/locations_encounters_data.js"></script>
         <script src="scripts/services/data/locations/locations_data.js"></script>
         <script src="scripts/controllers/arkham_encounters.js"></script>
+        <script src="scripts/directives/mini_card_transfer.js"></script>
         <!-- endbuild -->
 </body>
 </html>
