--- a/app/index.html
+++ b/app/index.html
@@ -29,6 +29,7 @@
           <li><a ng-href="#/settings">Settings</a></li>
           <li><a ng-href="#/investigator">Investigator</a></li>
           <li><a ng-href="#/arkham_encounters">Encounters</a></li>
+          <li><a ng-href="#/mythos">Mythos</a></li>
         </ul>
         <h3 class="text-muted">arkhamHelper</h3>
       </div>
