--- a/app/index.html
+++ b/app/index.html
@@ -110,6 +110,8 @@
         <script src="scripts/controllers/mythos.js"></script>
         <script src="scripts/services/mythos.js"></script>
         <script src="scripts/services/data/mythos_data.js"></script>
+        <script src="scripts/services/data/allies_data.js"></script>
+        <script src="scripts/services/card_pile_allies.js"></script>
         <!-- endbuild -->
 </body>
 </html>
