--- a/app/index.html
+++ b/app/index.html
@@ -112,6 +112,7 @@
         <script src="scripts/services/data/mythos_data.js"></script>
         <script src="scripts/services/data/allies_data.js"></script>
         <script src="scripts/services/card_pile_allies.js"></script>
+        <script src="scripts/services/terror_level.js"></script>
         <!-- endbuild -->
 </body>
 </html>
