put terror level in a directive

--- a/app/index.html
+++ b/app/index.html
@@ -113,6 +113,7 @@
         <script src="scripts/services/data/allies_data.js"></script>
         <script src="scripts/services/card_pile_allies.js"></script>
         <script src="scripts/services/terror_level.js"></script>
+        <script src="scripts/directives/terror_level.js"></script>
         <!-- endbuild -->
 </body>
 </html>
