--- a/app/index.html
+++ b/app/index.html
@@ -114,6 +114,7 @@
         <script src="scripts/services/card_pile_allies.js"></script>
         <script src="scripts/services/terror_level.js"></script>
         <script src="scripts/directives/terror_level.js"></script>
+        <script src="scripts/directives/select_ally.js"></script>
         <!-- endbuild -->
 </body>
 </html>
