--- a/app/index.html
+++ b/app/index.html
@@ -115,6 +115,7 @@
         <script src="scripts/services/terror_level.js"></script>
         <script src="scripts/directives/terror_level.js"></script>
         <script src="scripts/directives/select_ally.js"></script>
+        <script src="scripts/directives/turn_and_phase_ctrl.js"></script>
         <!-- endbuild -->
 </body>
 </html>
