add gates and monsters trophies to investigators

--- a/app/index.html
+++ b/app/index.html
@@ -116,6 +116,12 @@
         <script src="scripts/directives/terror_level.js"></script>
         <script src="scripts/directives/select_ally.js"></script>
         <script src="scripts/directives/turn_and_phase_ctrl.js"></script>
+        <script src="scripts/services/card_pile_gates.js"></script>
+        <script src="scripts/services/card_pile_monsters.js"></script>
+        <script src="scripts/services/data/monsters_data.js"></script>
+        <script src="scripts/services/data/gates_data.js"></script>
+        <script src="scripts/directives/monsters_trophies.js"></script>
+        <script src="scripts/directives/gates_trophies.js"></script>
         <!-- endbuild -->
 </body>
 </html>
