add a dice roller helper

--- a/app/index.html
+++ b/app/index.html
@@ -122,6 +122,7 @@
         <script src="scripts/services/data/gates_data.js"></script>
         <script src="scripts/directives/monsters_trophies.js"></script>
         <script src="scripts/directives/gates_trophies.js"></script>
+        <script src="scripts/directives/dice_and_roll.js"></script>
         <!-- endbuild -->
 </body>
 </html>
