move dice and roll to investigator sheet

--- a/app/index.html
+++ b/app/index.html
@@ -123,6 +123,9 @@
         <script src="scripts/directives/monsters_trophies.js"></script>
         <script src="scripts/directives/gates_trophies.js"></script>
         <script src="scripts/directives/dice_and_roll.js"></script>
+        <script src="scripts/services/card_pile_specials.js"></script>
+        <script src="scripts/services/data/specials_cards_data.js"></script>
+        <script src="scripts/directives/inv_special_cards_list.js"></script>
         <!-- endbuild -->
 </body>
 </html>
