separate css on thematic files

--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,9 @@
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/locations_encounters.css">
+    <link rel="stylesheet" href="styles/investigator.css">
+    <link rel="stylesheet" href="styles/mythos.css">
+    <link rel="stylesheet" href="styles/settings.css">
     <!-- endbuild -->
   </head>
   <body ng-app="arkhamHelperApp">
@@ -25,11 +28,11 @@
     <div class="container-fluid">
       <div class="header">
         <ul class="nav nav-pills pull-right">
-          <li><a ng-href="#">Home</a></li>
-          <li><a ng-href="#/settings">Settings</a></li>
-          <li><a ng-href="#/investigator">Investigator</a></li>
-          <li><a ng-href="#/arkham_encounters">Encounters</a></li>
-          <li><a ng-href="#/mythos">Mythos</a></li>
+          <li><a class="btn btn-default btn-sm" ng-href="#">Home</a></li>
+          <li><a class="btn btn-default btn-sm" ng-href="#/settings">Settings</a></li>
+          <li><a class="btn btn-default btn-sm" ng-href="#/investigator">Investigator</a></li>
+          <li><a class="btn btn-default btn-sm" ng-href="#/arkham_encounters">Encounters</a></li>
+          <li><a class="btn btn-default btn-sm" ng-href="#/mythos">Mythos</a></li>
         </ul>
         <h3 class="text-muted">arkhamHelper</h3>
       </div>
