--- a/app/index.html
+++ b/app/index.html
@@ -129,6 +129,7 @@
         <script src="scripts/services/card_pile_specials.js"></script>
         <script src="scripts/services/data/specials_cards_data.js"></script>
         <script src="scripts/directives/inv_special_cards_list.js"></script>
+        <script src="scripts/services/data/neighborhoods_data.js"></script>
         <!-- endbuild -->
 </body>
 </html>
