--- a/app/index.html
+++ b/app/index.html
@@ -139,6 +139,7 @@
         <script src="scripts/directives/mini_inv.js"></script>
         <script src="scripts/directives/monster_selector.js"></script>
         <script src="scripts/directives/monster_list.js"></script>
+        <script src="views/templates.js"></script>
         <!-- endbuild -->
 </body>
 </html>
