--- a/app/index.html
+++ b/app/index.html
@@ -46,7 +46,7 @@
 
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
-    <!-- <script>
+    <script>
   		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -54,7 +54,7 @@
 
   		ga('create', 'UA-56937134-2', 'auto');
   		// ga('send', 'pageview');
-	</script> -->
+	</script> 
 
     <!-- build:js(.) scripts/oldieshim.js -->
     <!--[if lt IE 9]>
