--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!doctype html> <html class="no-js"> <head> <meta charset="utf-8"> <title></title> <meta name="description" content=""> <meta name="viewport" content="width=device-width"> <!-- Place favicon.ico and apple-touch-icon.png in the root directory --> <link rel="stylesheet" href="styles/vendor.20833e0b.css"> <link rel="stylesheet" href="styles/main.f21a4145.css">  <body ng-app="arkhamHelperApp"> <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-    <![endif]--> <!-- Add your site or application content here --> <div class="container-fluid"> <div class="header"> <ul class="nav nav-pills pull-right"> <li><a class="btn btn-default btn-sm" ng-href="#">Home</a></li> <li><a class="btn btn-default btn-sm" ng-href="#/settings">Settings</a></li> <li><a class="btn btn-default btn-sm" ng-href="#/investigator">Investigator</a></li> <li><a class="btn btn-default btn-sm" ng-href="#/arkham_encounters">Encounters</a></li> <li><a class="btn btn-default btn-sm" ng-href="#/mythos">Mythos</a></li> <li><a class="btn btn-default btn-sm" ng-href="#/locations">Locations</a></li> </ul> <h3 class="text-muted">arkhamHelper</h3> </div> <div ng-view=""></div> </div> <!-- Google Analytics: change UA-XXXXX-X to be your site's ID --> <!-- <script>
-  		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    <![endif]--> <!-- Add your site or application content here --> <div class="container-fluid"> <div class="header"> <ul class="nav nav-pills pull-right"> <li><a class="btn btn-default btn-sm" ng-href="#">Home</a></li> <li><a class="btn btn-default btn-sm" ng-href="#/settings">Settings</a></li> <li><a class="btn btn-default btn-sm" ng-href="#/investigator">Investigator</a></li> <li><a class="btn btn-default btn-sm" ng-href="#/arkham_encounters">Encounters</a></li> <li><a class="btn btn-default btn-sm" ng-href="#/mythos">Mythos</a></li> <li><a class="btn btn-default btn-sm" ng-href="#/locations">Locations</a></li> </ul> <h3 class="text-muted">arkhamHelper</h3> </div> <div ng-view=""></div> </div> <!-- Google Analytics: change UA-XXXXX-X to be your site's ID --> <script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
   		ga('create', 'UA-56937134-2', 'auto');
-  		// ga('send', 'pageview');
-	</script> --> <!--[if lt IE 9]>
+  		// ga('send', 'pageview');</script> <!--[if lt IE 9]>
     <script src="scripts/oldieshim.a466b7b1.js"></script>
     <![endif]--> <script src="scripts/vendor.4776d940.js"></script> <script src="scripts/scripts.77d55295.js"></script>  
