--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,8 @@
     <link rel="stylesheet" href="styles/mythos.css">
     <link rel="stylesheet" href="styles/settings.css">
     <link rel="stylesheet" href="styles/locations.css">
+    <link rel="stylesheet/less" type="text/css" href="styles/locations.less">
+
     <!-- endbuild -->
   </head>
   <body ng-app="arkhamHelperApp">
@@ -80,6 +82,7 @@
     <script src="bower_components/angular-ui-sortable/sortable.js"></script>
     <script src="bower_components/angular-shuffler/shuffler.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+    <script src="bower_components/less/dist/less.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
