remove old css file: location.css
was replaced by locations.less

--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html class="no-js">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Arkham Helper</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -18,7 +18,6 @@
     <link rel="stylesheet" href="styles/investigator.css">
     <link rel="stylesheet" href="styles/mythos.css">
     <link rel="stylesheet" href="styles/settings.css">
-    <link rel="stylesheet" href="styles/locations.css">
     <link rel="stylesheet/less" type="text/css" href="styles/locations.less">
 
     <!-- endbuild -->
